--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY="api_key"
+API_KEY="pub_28335fde3fc0d932a57f5758e0356bd3854fc"
 SERVER_NAME="news_data"
 DATABASE_NAME="news"
 DB_USERNAME="postgres"
