--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY="pub_28325b8430998b0ec19355d5e1973b6454abc"
+API_KEY="api_key"
 SERVER_NAME="news_data"
 DATABASE_NAME="news"
 DB_USERNAME="postgres"
