removed storing data in json_response variable

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY="api_key"
+API_KEY="pub_28262790a0fcc9103be6cd2f74c7ef39a34dc"
 SERVER_NAME="news_data"
 DATABASE_NAME="news"
 DB_USERNAME="postgres"
