--- a/.env
+++ b/.env
@@ -1,11 +1,29 @@
-API_KEY="api_key"
-SERVER_NAME="news_data"
-DATABASE_NAME="news"
+API_KEY="pub_28495b85949d28b95a2c4acca263c50fe2514"
+SERVER_NAME="localhost"
+DATABASE_NAME="pro"
 DB_USERNAME="postgres"
-DB_PASSWORD="postgres"
-PORT=5432
-LOGGING_SERVER_NAME="news"
-LOGGING_DATABASE_NAME="news_logging"
-LOGGING_USERNAME="postgres"
-LOGGING_PASSWORD="postgres"
-LOGGING_PORT=5432
+DB_PASSWORD="cat"
+PORT=5433
+
+#  API_KEY_ID = os.environ.get("API_KEY_ID")
+#     API_SECRET_KEY = os.environ.get("API_SECRET_KEY")
+#     DB_USERNAME = os.environ.get("DB_USERNAME")
+#     DB_PASSWORD = os.environ.get("DB_PASSWORD")
+#     SERVER_NAME = os.environ.get("SERVER_NAME")
+#     DATABASE_NAME = os.environ.get("DATABASE_NAME")
+#     PORT = os.environ.get("PORT")
+
+#  API_KEY_ID = os.environ.get("API_KEY_ID")
+#     API_SECRET_KEY = os.environ.get("API_SECRET_KEY")
+    # DB_USERNAME = os.environ.get("DB_USERNAME")
+    # DB_PASSWORD = os.environ.get("DB_PASSWORD")
+    # SERVER_NAME = os.environ.get("SERVER_NAME")
+    # DATABASE_NAME = os.environ.get("DATABASE_NAME")
+    # PORT = os.environ.get("PORT")
+
+
+# LOGGING_SERVER_NAME="news"
+# LOGGING_DATABASE_NAME="news_logging"
+# LOGGING_USERNAME="postgres"
+# LOGGING_PASSWORD="postgres"
+# LOGGING_PORT=5432
